
5.2b1 -> 5.3a1
    - jbj: rpmbz: expose sufficient methods to uncouple bsdiff from bzip2.
    - jbj: add bsdiff/bspatch from bsdiff-4.3.
    - jbj: rpmlio: add "opt-in" enablers for syscall/scriptlet logging.
    - jbj: rpmlio: add --rpmliodebug spewage valve.
    - jbj: rpmlio: add syscall/scriplet logging to -lrpmdb API for rework.
    - jbj: revert the change for autoconf-2.65, breaks w autoconf-2.63.
    - devzero2000: complete changing db2offset data type to uint32_t everywhere
    - bero: Fix generation of configure script with autoconf 2.65
    - jbj: rpmdb: don't recurse within dbiFindByLabel.
    - jbj: rpmdb: use PCRE patterns on Name index for package queries.
    - devzero2000: don't permit using b0rken configure option
    - jbj: rpmdb: fix: ensure Seqno h# counter is initialized to 1 when created.
    - proyvind: add %distepoch back to provideversion, leave legacy
	compatibility for adopters to care about.
    - devzero2000: fix hardwired docdir in rpmfc
    - proyvind: fix assert fail with Mandriva filetriggers in case of
	installing src.rpm with no triggers queue. (from David Smid/Unity Linux)
    - jbj: rpmmi: rework iterator instance filtering as a Bloom filter.
    - jbj: rpmdb: eliminate signature/digest checks on rpmdb Header blobs.
    - jbj: rpmbf: permit non-string Bloom filters, s/char/void/ in prototypes.
    - jbj: rpmdb: eliminate rpmdbFlags hysteria.
    - jbj: rpmdb: use Seqno to assign Packages primary keys.
    - jbj: rpmdb: save Packages primary key in network order always.
    - jbj: rpmdb: eliminate --verifydb (except for rpmtsVerifyDB error stub).
    - jbj: rpmdb: eliminate --initdb (except for rpmtsInitDB error stub).
    - jbj: rpmdb: assign the primary key to installed headers persistently.
    - jbj: rpmdb: use a Bloom filter not a bitmap to determine if header
	signature/digest was checked. Header instances no longer need to
	be small integers.
    - jbj: rpmdb: begin phasing out RPMDBI_LABEL with patterns on keys.